feat(eval): test functionality in progress
