# app.js
@@ -5,10 +5,11 @@ const bodyParser = require('body-parser');
 const dotenv = require('dotenv');
 
 const  Users = require('./src/routes/user.route.js');
-const Combinations = require("./src/routes/conbination.route.js")
-const Blackjack = require('./src/routes/blackjack.route.js')
-const Cesar = require('./src/routes/cesar.route.js')
-const Repeat = require('./src/routes/repeat.route.js')
+const Combinations = require("./src/routes/conbination.route.js");
+const Blackjack = require('./src/routes/blackjack.route.js');
+const Cesar = require('./src/routes/cesar.route.js');
+const Repeat = require('./src/routes/repeat.route.js');
+const Expression = require('./src/routes/operation.route.js');
 
 dotenv.config();
 
@@ -28,6 +29,7 @@ app.use('/combinations', Combinations)
 app.use('/blackjack', Blackjack)
 app.use('/cesar', Cesar)
 app.use('/repeat', Repeat)
+app.use('/expression', Expression)
 
 
 // START SERVER
