# src/swagger.json
@@ -229,6 +229,41 @@
           }
         }
       }
+    },
+    "/expression/": {
+      "post": {
+        "tags": [
+          "cesar"
+        ],
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "summary": "Eval expression",
+        "requestBody":{
+          "required": "true",
+          "content":{
+            "application/json":{
+              "schema": {
+                "$ref": "#/definitions/expression"
+              }
+            }
+          }
+        },
+        
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Failed. Bad post data."
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -283,6 +318,15 @@
           "type": "number"
         }
       }
+    },
+    "expression": {
+      "type": "object",
+      "properties": {
+        "operation": {
+          "type": "string"
+        }
+      }
     }
+
   }
 }
